@@ -43,6 +43,8 @@
 
 Function description for population lat_long results should be lat_long instead of mean ({pull}81[#81])
 
+By-fields should respect model_plot_config.terms
+
 === Regressions
 
 === Known Issues
